--- a/Meeting/MIDI.js-master/examples/notation5.html
+++ b/Meeting/MIDI.js-master/examples/notation5.html
@@ -114,7 +114,8 @@ function makeEventArray(){
 	eventArray.push(new Event(3.5, 0.5, 69, 'US') );
 	eventArray.push(new Event(4,     1, 67, 'DS') );
 	eventArray.push(new Event(5,     1, 79, 'US') );
-	eventArray.push(new Event(6, 2, 67, 'D') );
+	eventArray.push(new Event(6, 	 1, 67, 'D') );
+	eventArray.push(new Event(7, 	 1, 1, 'D') );
 	return eventArray;
 
 }
@@ -148,7 +149,17 @@ function eventToScore(eventArray){
 	else if(eventArray[count].beat>3&&eventArray[count].beat<8)val=27+1;
 	else if(eventArray[count].beat>7&&eventArray[count].beat<12)val=23+1;
 	else if(eventArray[count].beat>11&&eventArray[count].beat<16)val=19+1;
-	
+	//////放休止符//////////
+	if(eventArray[count].duration==0.5&&eventArray[count].note==1){
+		eighthNoteRest.position.x=eventArray[count].beat*4-val;
+		eighthNoteRest.position.y=5;
+		scene.add(eighthNoteRest);
+	}
+	if(eventArray[count].duration==1&&eventArray[count].note==1){
+		quarterNoteRest.position.x=eventArray[count].beat*4-val;
+		quarterNoteRest.position.y=6.5;
+		scene.add(quarterNoteRest);
+	}
 	//////放二分音符//////////
 	if(eventArray[count].duration==2){
 		halfNote.position.x=eventArray[count].beat*4-val;
@@ -162,7 +173,7 @@ function eventToScore(eventArray){
 		scene.add(halfNote);
 	}
 	//////放四分音符//////////
-	if(eventArray[count].duration==1){
+	if(eventArray[count].duration==1&&eventArray[count].note>0){
 		quarterNote.position.x=eventArray[count].beat*4-val;
 		if(eventArray[count].note>70){
 			quarterNote.rotation.z=Math.PI;
@@ -174,27 +185,17 @@ function eventToScore(eventArray){
 		scene.add(quarterNote);
 	}
 	//////放八分音符//////////
-	if(eventArray[count].duration==0.5&&eventArray[count].note<70){
+	if(eventArray[count].duration==0.5&&eventArray[count].note<70&&eventArray[count].note>0){
 		eighthNotes.position.x=eventArray[count].beat*4-val;
 		eighthNotes.position.y=noteToPos(eventArray[count].note)+0.3;
 		scene.add(eighthNotes);
 	}
-	if(eventArray[count].duration==0.5&&eventArray[count].note>70){
+	if(eventArray[count].duration==0.5&&eventArray[count].note>70&&eventArray[count].note>0){
 		eighthNotesdown.position.x=eventArray[count].beat*4-val;
 		eighthNotesdown.position.y=noteToPos(eventArray[count].note)+0.3-6.3;
 		scene.add(eighthNotesdown);
 	}
-	//////放休止符//////////
-	if(eventArray[count].duration==0.5&&eventArray[count].note==0){
-		eighthNoteRest.position.x=eventArray[count].beat*4-val;
-		eighthNoteRest.position.y=noteToPos(eventArray[count].note)+0.3;
-		scene.add(eighthNoteRest);
-	}
-	if(eventArray[count].duration==1&&eventArray[count].note==0){
-		quarterNoteRest.position.x=eventArray[count].beat*4-val;
-		quarterNoteRest.position.y=noteToPos(eventArray[count].note)+0.3;
-		scene.add(quarterNoteRest);
-	}
+	
 	
 	eventToScore.counter++;
 	if(eventToScore.counter>eventArray.length)return 0;
